drawing user analytic info

--- a/behaviorCharts.html
+++ b/behaviorCharts.html
@@ -49,14 +49,14 @@
 			<h4>Posts owners:</h4>
 			<canvas id="myOwnersStudy"></canvas>
 
-			<h4>saveLooked:</h4>
+			<h4>Time spent on viewing posts:</h4>
 			<canvas id="saveLooked"></canvas>
 
-			<h4>actionsList:</h4>
+			<h4>How many action did you make threw days:</h4>
 			<canvas id="actionsList"></canvas>
 
-			<h4>chattingWithUser:</h4>
-			<canvas id="chattingWithUser"></canvas>
+			<h4 style="display: none">How many time did you chat with users:</h4>
+			<canvas id="chattingWithUser" style="display: none"></canvas>
 		</div>
 	</div>
 	<script src="js/global/jquery.min.js"></script>
