Adding Android app link on Google play store.

--- a/Server/index.html
+++ b/Server/index.html
@@ -56,7 +56,8 @@
                       is a browser extension (i.e. plug-in) for Google Chrome.
                       It collects data about the privacy settings as well as about behavior of Facebook users.
                       It also helps users to customize their privacy settings as well as to know their behavior on Facebook.</p>
-                      <p class="card-text"> Note: A mobile app for Android with similar functionality is being developed.</p>
+                      <p class="card-text"> In addition, a mobile application for Android operating system with similar functionality is 
+                        on Google Play store.</p>
                   </div>
                   <div class="col-sm">
                     <img src="static/img/welcome.jpg" class="img-fluid" height="400px" width="600px">
@@ -84,7 +85,8 @@
               <h2>Facebook Privacy Analyzer Application <span class="badge badge-secondary">Soon</span></h2>
               <img src="static/img/android_app.png" class="img-fluid" alt="android app icon" width="400px" height="400px">
               <hr class="my-4">
-              <p>It will be ready soon on <strong> Google Play store </strong> <img src="static/img/android-playstore.png" alt="play store icon" height="18" width="18"></p>
+              <p>You can download it now for free from <strong> Google Play store </strong> <img src="static/img/android-playstore.png" alt="play store icon" height="18" width="18"></p>
+              <p class="lead"><a class="btn btn-success btn-lg" target="_blank" href="https://play.google.com/store/apps/details?id=com.nullsky.fba" role="button">Download</a></p>
               <!-- <p class="lead"> <a class="btn btn-success btn-lg" href="#download-section" role="button">Download</a> </p> -->
             </div>
           </div>
@@ -256,6 +258,15 @@
                   <p class="card-text"> We use <a href="https://www.json.org/" target="_blank">JSON</a> file format, for more details click <strong><a href="collected_data_fields.html" target="_blank">here</a></strong>.
                   </p>
                 </div>
+              </div>
+
+              <h2 class="display-6">Android Application</h2>
+              <div class="card bg-light mb-3">
+                <div class="card-header">Why this application?</div>
+                  <div class="card-body">
+                    <p class="card-text"> Recently, most people tend to use smart devices to reach their Facebook account.
+                      From that, the need for smart devices application was emerged.</p>
+                  </div>
               </div>
 
             </div>
