Modifying charts label.

--- a/Extention/behaviorCharts.html
+++ b/Extention/behaviorCharts.html
@@ -37,7 +37,7 @@
 			<canvas id="maleVsFemale"></canvas>
 			<hr>
 
-			<h4>How many fb page you opened every time:</h4>
+			<h4>How many Facebook page you opened every time:</h4>
 			<canvas id="myPagesStudy"></canvas>
 
 			<h4>The posts you are seeing:</h4>
