--- a/Server/index.html
+++ b/Server/index.html
@@ -269,6 +269,30 @@
                   </div>
               </div>
 
+              <div class="card bg-light mb-3">
+                <div class="card-header">How to use it?</div>
+                  <div class="card-body">
+                    <p class="card-text"> All you need is to login your Facebook account from our application,
+                      and then continue your usual behavior on the original Facebook application.</p>
+                  </div>
+              </div>
+              
+              <div class="card bg-light mb-3">
+                <div class="card-header">How it works?</div>
+                  <div class="card-body">
+                    <p class="card-text"> The application is collecting the Activity log in your Facebook account.
+                      it collects your actions that happened before 3 days, you can view the collected data before sending to the server. </p>
+                  </div>
+              </div>
+                
+              <div class="card bg-light mb-3">
+                <div class="card-header">How do we preserve your privacy?</div>
+                  <div class="card-body">
+                    <p class="card-text"> Your privacy data is completely annonymized, every data element (your id, group id, page id ...etc.)
+                      is hashed to annonymize your identity as well as in the Chrome browser plugin. </p>
+                  </div>
+              </div>
+
             </div>
           </div>
         </div>
@@ -322,7 +346,6 @@
         </div>
     </section>
 
-
     <section id="footer" class="jumbotron">
       <div class="card-footer">
         <div class="row">
@@ -354,7 +377,6 @@
       <div class="card-footer"><small class="text-muted">Copyright &copy; 2018 by Research team.</small>
       </div>
     </section>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
