Adding Android application page.

--- a/Server/index.html
+++ b/Server/index.html
@@ -57,7 +57,7 @@
                       It collects data about the privacy settings as well as about behavior of Facebook users.
                       It also helps users to customize their privacy settings as well as to know their behavior on Facebook.</p>
                       <p class="card-text"> In addition, a mobile application for Android operating system with similar functionality is 
-                        on Google Play store.</p>
+                        on Google Play store. To see how it works, click <a href="app_work_methodology.html" target="_blank">here</a>.</p>
                   </div>
                   <div class="col-sm">
                     <img src="static/img/welcome.jpg" class="img-fluid" height="400px" width="600px">
@@ -281,7 +281,8 @@
                 <div class="card-header">How it works?</div>
                   <div class="card-body">
                     <p class="card-text"> The application is collecting the Activity log in your Facebook account.
-                      it collects your actions that happened before 3 days, you can view the collected data before sending to the server. </p>
+                      it collects your actions that happened before 3 days, you can view the collected data before sending to the server.
+                      <strong> For more technical details, click <a href="app_work_methodology.html" target="_blank">here</a></strong>. </p>
                   </div>
               </div>
                 
