Modifying Android application page.

--- a/Server/app_work_methodology.html
+++ b/Server/app_work_methodology.html
@@ -27,12 +27,12 @@
                 </p>
                 <p>
                   Two Facebook pages are to be loaded into that web view, first page is the login page, this page appears when the user first start the application,
-                  to ask him to log into his Facebook account, after log in a new cookie will be stored into the web view called C-User,
+                  to ask him to log into his Facebook account, after log in a new cookie will be stored into the web view called C_User,
                   this cookie is used to know if the user is logged in or not, if the user is logged in, the app move him to another page,
                   which has the history of what we collected about him.
                 </p>
                 <p>
-                  User_id can be found in the C-User cookie as well; this id is to be stored in the storage of the application.
+                  User_id can be found in the C_User cookie as well; this id is to be stored in the storage of the application.
                   The application opens the activity log of the Facebook user account, the activity log consists of group of filters,
                   for example there is filters for friends, likes, pages, and many other.
                 </p>
